--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,14 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_svg: ^0.23.0+1
   dropdown_button2: ^2.3.9
+  flutter_bloc: ^8.1.5
+  equatable: ^2.0.5
+  bloc: ^8.1.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
