--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_bloc: ^8.1.5
   equatable: ^2.0.5
   bloc: ^8.1.4
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
