--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,8 +2,16 @@
     // Use IntelliSense to learn about possible attributes.
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "dart.flutterWebRenderer": "auto",
+  "dart.flutterLaunchBrowser": {
+  "enabled": true,
+  "browser": "firefox"
+}
+,
     "version": "0.2.0",
     "configurations": [
+
+
         {
             "name": "web_task1",
             "request": "launch",
